k3s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: gic2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  strategy: {}
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: registry.deti:5000/gic2/client:latest
          #imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - name: client-config-map
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: client-config-map
          configMap:
            name: client-config-map
            items:
               - key: default.conf
                 path: default.conf
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                app: client
