k3s/redis-replica-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-replica-deployment
  namespace: gic2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis-replica
  strategy: {}
  template:
    metadata:
      labels:
        app: redis-replica
    spec:
      containers:
        - name: redis
          image: registry.deti:5000/gic2/redis
          #imagePullPolicy: Never
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: redis-replica
