k3s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: gic2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  strategy: {}
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: registry.deti:5000/gic2/server
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources: {}
      #restartPolicy: Always
      #affinity:
      #  podAntiAffinity:
      #    requiredDuringSchedulingIgnoredDuringExecution:
      #    - topologyKey: kubernetes.io/hostname
      #      labelSelector:
      #        matchLabels:
      #          app: app
