k3s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: gic2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  strategy: {}
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: registry.deti:5000/gic2/worker
          #imagePullPolicy: Never
          ports:
            - containerPort: 8001
          resources: {}
          volumeMounts:
            - name: server-config-map
              mountPath: /etc/resolv.conf
              subPath: resolv.conf
              readOnly: true
            - name: gic2-server-secret
              mountPath: /etc/jarr/jarr.json
              subPath: jarr.json
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: server-config-map
          configMap:
            name: server-config-map
            items:
            - key: resolv.conf
              path: resolv.conf
        - name: gic2-server-secret
          secret:
            secretName: gic2-server-secret
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                app: worker
      dnsPolicy: Default
