k3s/client-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-service
  namespace: gic2
spec:
  ports:
    - port: 80
      targetPort: 80
  selector: 
    app: client
