k3s/promo-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: promo-cluster-service
  namespace: gic2
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: promo
