k3s/redis-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-service
  namespace: gic2
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector: 
    app: redis
