k3s/redis-replica-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-replica-cluster-service
  namespace: gic2
spec:
  type: LoadBalancer
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-replica
