k3s/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gic2-ingress
  namespace: gic2
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: www.dailyenews.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-service
                port:
                  number: 80
    - host: api.dailyenews.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-cluster-service
                port:
                  number: 8000

    - host: monitoring.dailyenews.k3s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
